<resources>
    <string name="app_name">BTL</string>
    <string name="action_settings">Settings</string>
    <string name="add_cosmetic">Thêm mỹ phẩm</string>
    <string name="name">Tên</string>
    <string name="id">Mã</string>
    <string name="price">Giá</string>
    <string name="effect">Công dụng</string>
    <string name="water">Nước</string>
    <string name="capsule">Viên</string>
    <string name="powder">Bột</string>
    <string name="type">Dạng</string>
    <string name="button_add">Thêm</string>
    <string name="mes_add_sucess">Thêm mỹ phẩm thành công!</string>
    <string name="description">Mô tả</string>
    <string name="add_func">Thêm công dụng</string>
    <string name="button_back">Trở lại</string>
    <string name="button_edit">Cập Nhật</string>
    <string name="edit">Sửa thông tin</string>
    <string name="mes_confirm_delete">Bạn có muốn xóa?</string>
    <string name="mes_yes">Có</string>
    <string name="mes_no">Không</string>
    <string name="mes_del">Xóa thành công!</string>
    <string name="mes_update_success">Cập nhật thành công!</string>
    <string name="mes_update_fail">Cập nhật thất bại</string>
    <string name="mes_null">Không có mỹ phẩm có công dụng </string>
    <string name="search">Tìm kiếm</string>
</resources>
