<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.AddCosmeticActivity"
    android:orientation="vertical">


    <EditText
        android:id="@+id/text_cos_name"
        android:layout_width="@dimen/dp_350"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_gravity="center"
        />

    <EditText
        android:id="@+id/text_cos_price"
        android:layout_width="@dimen/dp_350"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:layout_gravity="center"
        />

    <EditText
        android:id="@+id/text_cos_effect"
        android:layout_width="@dimen/dp_350"
        android:layout_height="wrap_content"
        android:hint="@string/effect"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/text_cos_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/type"
            android:paddingLeft="@dimen/dp_20"
            android:textSize="@dimen/sp_20"
            android:layout_gravity="center"/>
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="2">

            <RadioButton
                android:id="@+id/radioButton_water"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/water"
                android:textSize="@dimen/sp_20"/>

            <RadioButton
                android:id="@+id/radioButton_capsule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capsule"
                android:layout_weight="1"
                android:textSize="@dimen/sp_20"/>

            <RadioButton
                android:id="@+id/radioButton_powder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/powder"
                android:textSize="@dimen/sp_20"/>
        </RadioGroup>
    </LinearLayout>


    <Button
        android:id="@+id/button_cos_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
       android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/button_add" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_recycle_list_cosmetic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:paddingTop="@dimen/dp_16"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

</LinearLayout>