<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/image_item_cosmetic"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100" />
    <LinearLayout
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_100"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text_item_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/id"/>
        <TextView
            android:id="@+id/text_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/name"/>
        <TextView
            android:id="@+id/text_item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/price"/>
        <TextView
            android:id="@+id/text_item_effect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/effect"/>
        <TextView
            android:id="@+id/text_item_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/type"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/image_edit_cos"
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:src="@drawable/icon_edit"/>
    <ImageView
        android:id="@+id/image_del_cos"
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:src="@drawable/icon_delete"/>
</LinearLayout>