<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/frag_add_func_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/frag_add_func_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        android:hint="@string/description" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp_8">
        <Button
            android:id="@+id/frag_button_add_effect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:gravity="center"
            android:text="@string/button_add"
            android:enabled="true"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/frag_list_effect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>