<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.AddCosmeticActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="142dp"
        android:layout_height="31dp"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/add_cosmetic"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <EditText
        android:id="@+id/text_name"
        android:layout_width="@dimen/dp_350"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_0"
        android:hint="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/text_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_price"
        android:layout_width="@dimen/dp_350"
        android:layout_height="@dimen/dp_40"

        android:hint="@string/price"
        app:layout_constraintBottom_toTopOf="@+id/text_function"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name" />

    <EditText
        android:id="@+id/text_function"
        android:layout_width="@dimen/dp_350"
        android:layout_height="@dimen/dp_40"

        android:hint="@string/function"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_price" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="@dimen/dp_200"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_type"
        app:layout_constraintTop_toBottomOf="@+id/text_function">

        <RadioButton
            android:id="@+id/radioButton_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/water" />

        <RadioButton
            android:id="@+id/radioButton_capsule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capsule"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="257dp" />

        <RadioButton
            android:id="@+id/radioButton_powder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/powder" />
    </RadioGroup>

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_0"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_0"
        android:text="@string/button_add"
        app:layout_constraintBottom_toTopOf="@+id/list_cosmetic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:ignore="MissingConstraints" />

    <ListView
        android:id="@+id/list_cosmetic"
        android:layout_width="@dimen/dp_350"
        android:layout_height="@dimen/dp_150"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_0"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_add"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/text_type"
        android:layout_width="51dp"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_0"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginBottom="60dp"
        android:text="@string/type"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toTopOf="@+id/list_cosmetic"
        app:layout_constraintEnd_toStartOf="@+id/text_function"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_function"
        app:layout_constraintVertical_bias="0.333" />

</android.support.constraint.ConstraintLayout>